--- a/LoginManager/ListPage.xaml
+++ b/LoginManager/ListPage.xaml
@@ -1,7 +1,13 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LoginManager.ListPage">
-        <StackLayout>
+             x:Class="LoginManager.ListPage"
+             xmlns:local="clr-namespace:LoginManager.Shared">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InfiniteScrollBehavior x:Key="InfiniteScrollBehavior"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+    <StackLayout>
         <VerticalStackLayout
         Padding="40,0"
         Spacing="25">
@@ -55,7 +61,10 @@
             </CollectionView.ItemTemplate>
         </CollectionView>-->
         <ScrollView VerticalOptions="FillAndExpand">
-            <CollectionView x:Name="DataItems" ItemsSource="{Binding Items}" >
+            <CollectionView x:Name="DataItems"
+                            ItemsSource="{Binding Items}"
+                            RemainingItemsThreshold="3"
+                            RemainingItemsThresholdReachedCommand="{Binding LoadMoreItemsCommand}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                             <Grid>
