--- a/LoginManager/ListPage.xaml
+++ b/LoginManager/ListPage.xaml
@@ -7,17 +7,21 @@
             <local:InfiniteScrollBehavior x:Key="InfiniteScrollBehavior"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <StackLayout>
-        <VerticalStackLayout
+    <VerticalStackLayout VerticalOptions="FillAndExpand" BackgroundColor="Gray">
+    <VerticalStackLayout
         Padding="40,0"
-        Spacing="25">
+        Spacing="25"
+            Background="LightGreen">
             <Button x:Name="Setting" Text="Nastavení" IsEnabled="True" Command="{Binding SettingCommand}" Padding="8, 8, 8, 8" HorizontalOptions="End" />
             <HorizontalStackLayout>
                 <Entry x:Name="Filter" FontAttributes="Italic" FontSize="Medium" WidthRequest="200" Text="{Binding FilterText}"  Placeholder="Filtr" />
                 <Button Text="Filtruj" Margin="0,-10" HeightRequest="50" Command="{Binding FilterCommand}" />
             </HorizontalStackLayout>
         </VerticalStackLayout>
-                <Grid HorizontalOptions="Fill">
+                <Grid HorizontalOptions="Fill"
+                      VerticalOptions="FillAndExpand"
+                      BackgroundColor="Yellow"
+                      MaximumHeightRequest="155">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50" />
                         <RowDefinition Height="50" />
@@ -28,44 +32,34 @@
                         <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="2*" />
                     </Grid.ColumnDefinitions>
-                    <Label Margin="40, 0" Grid.Row="0" Grid.Column="0" Text="{Binding Direction0}" FontSize="Large" >
+                    <Label Grid.Row="0" Grid.Column="0" Text="{Binding Direction0}" FontSize="Large" >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding LabelTappedCommand}" CommandParameter="0" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Margin="-55,10" Grid.Row="0" Grid.Column="1" Text="ID" FontSize="Small" />
-                    <Label Margin="40, 0" Grid.Row="1" Grid.Column="0" Text="{Binding Direction2}" FontSize="Large" >
+                    <Label Grid.Row="0" Grid.Column="1" Text="ID" FontSize="Small" />
+                    <Label Grid.Row="1" Grid.Column="0" Text="{Binding Direction2}" FontSize="Large" >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding LabelTappedCommand}" CommandParameter ="2" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Margin="-55,10" Grid.Row="1" Grid.Column="1" Text="Date Updated" FontSize="Small" />
-                    <Label Margin="40, 0" Grid.Row="2" Grid.Column="0" Text="{Binding Direction1}" FontSize="Large" >
+                    <Label Grid.Row="1" Grid.Column="1" Text="Date Updated" FontSize="Small" />
+                    <Label Grid.Row="2" Grid.Column="0" Text="{Binding Direction1}" FontSize="Large" >
                         <Label.GestureRecognizers>
                             <TapGestureRecognizer Command="{Binding LabelTappedCommand}" CommandParameter="1" />
                         </Label.GestureRecognizers>
                     </Label>
-                    <Label Margin="-55,10" Grid.Row="2" Grid.Column="1" Text="Name" FontSize="Small" />
+                    <Label Grid.Row="2" Grid.Column="1" Text="Name" FontSize="Small" />
                     <Rectangle  Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Fill="Black" />
                 </Grid>
 
-        <!--<CollectionView BackgroundColor="LightGray" ItemsSource="{Binding Items}" VerticalScrollBarVisibility="Always">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <StackLayout>
-                        <Label Text="{Binding Id}" FontSize="Large" />
-                        <Label Text="{Binding Name}" FontSize="Large" />
-                        <Label Text="{Binding DateToDisplay }" FontSize="Large" />
-                    </StackLayout>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>-->
+        
         <ScrollView VerticalOptions="FillAndExpand">
-            <CollectionView x:Name="DataItems"
-                            ItemsSource="{Binding Items}"
-                            RemainingItemsThreshold="3"
-                            RemainingItemsThresholdReachedCommand="{Binding LoadMoreItemsCommand}">
-                <CollectionView.ItemTemplate>
+            <CollectionView x:Name="DataItems" BackgroundColor="#E63C3C">
+                <CollectionView.Behaviors>
+                    <local:InfiniteScrollBehavior />
+                </CollectionView.Behaviors>
+            <CollectionView.ItemTemplate>
                     <DataTemplate>
                             <Grid>
                             <Grid.GestureRecognizers>
@@ -89,8 +83,8 @@
                         </Grid>
                     </DataTemplate>
                     </CollectionView.ItemTemplate>
-                </CollectionView>
+            </CollectionView>
         </ScrollView>
         <Button x:Name="Redirect" Text="Přidat novou položku" FontSize="Medium" FontAttributes="Bold" Command="{Binding AddCommand}" HorizontalOptions="Fill" />
-    </StackLayout>
+    </VerticalStackLayout>
 </ContentPage>
