--- a/LoginManager/ListPage.xaml
+++ b/LoginManager/ListPage.xaml
@@ -7,19 +7,26 @@
             <local:InfiniteScrollBehavior x:Key="InfiniteScrollBehavior"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <VerticalStackLayout VerticalOptions="FillAndExpand" BackgroundColor="Gray">
+    <VerticalStackLayout BackgroundColor="Blue">
+    <Grid x:Name="UpperGrid"  VerticalOptions="FillAndExpand" BackgroundColor="Gray">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="200"/>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="10"/>
+        </Grid.RowDefinitions>
     <VerticalStackLayout
+        Grid.Row="0"
         Padding="40,0"
         Spacing="25"
-            Background="LightGreen">
+            Background="Green">
             <Button x:Name="Setting" Text="Nastavení" IsEnabled="True" Command="{Binding SettingCommand}" Padding="8, 8, 8, 8" HorizontalOptions="End" />
             <HorizontalStackLayout>
                 <Entry x:Name="Filter" FontAttributes="Italic" FontSize="Medium" WidthRequest="200" Text="{Binding FilterText}"  Placeholder="Filtr" />
                 <Button Text="Filtruj" Margin="0,-10" HeightRequest="50" Command="{Binding FilterCommand}" />
             </HorizontalStackLayout>
         </VerticalStackLayout>
-                <Grid HorizontalOptions="Fill"
-                      VerticalOptions="FillAndExpand"
+                <Grid Grid.Row="1"
+                      HorizontalOptions="Fill"
                       BackgroundColor="Yellow"
                       MaximumHeightRequest="155">
                     <Grid.RowDefinitions>
@@ -52,14 +59,19 @@
                     <Label Grid.Row="2" Grid.Column="1" Text="Name" FontSize="Small" />
                     <Rectangle  Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Fill="Black" />
                 </Grid>
+        </Grid>
+        <Grid x:Name="UnderGrid" BackgroundColor="CadetBlue" VerticalOptions="FillAndExpand">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        
-        <ScrollView VerticalOptions="FillAndExpand">
-            <CollectionView x:Name="DataItems" BackgroundColor="#E63C3C">
+            <VerticalStackLayout Grid.Row="0" VerticalOptions="FillAndExpand" >
+            <ScrollView VerticalScrollBarVisibility="Always" VerticalOptions="FillAndExpand" >
+            <CollectionView x:Name="DataItems" BackgroundColor="#E63C3C" VerticalOptions="FillAndExpand">
                 <CollectionView.Behaviors>
                     <local:InfiniteScrollBehavior />
                 </CollectionView.Behaviors>
-            <CollectionView.ItemTemplate>
+                <CollectionView.ItemTemplate>
                     <DataTemplate>
                             <Grid>
                             <Grid.GestureRecognizers>
@@ -85,6 +97,8 @@
                     </CollectionView.ItemTemplate>
             </CollectionView>
         </ScrollView>
-        <Button x:Name="Redirect" Text="Přidat novou položku" FontSize="Medium" FontAttributes="Bold" Command="{Binding AddCommand}" HorizontalOptions="Fill" />
+        </VerticalStackLayout>
+        </Grid>
+        <Button Grid.Row="3" x:Name="Redirect" Text="Přidat novou položku" FontSize="Medium" FontAttributes="Bold" Command="{Binding AddCommand}" HorizontalOptions="Fill" />
     </VerticalStackLayout>
 </ContentPage>
