--- a/LoginManager/ListPage.xaml
+++ b/LoginManager/ListPage.xaml
@@ -7,33 +7,38 @@
             <local:InfiniteScrollBehavior x:Key="InfiniteScrollBehavior"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <VerticalStackLayout BackgroundColor="Blue">
-    <Grid x:Name="UpperGrid"  VerticalOptions="FillAndExpand" BackgroundColor="Gray">
+    <VerticalStackLayout>
+        <Grid x:Name="WrapperGrid">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="200" />
+                <RowDefinition Height="360 "/>
+                <RowDefinition Height="10 "/>
+            </Grid.RowDefinitions> 
+         <Grid 
+             Grid.Row="0"
+            x:Name="UpperGrid" >
         <Grid.RowDefinitions>
-            <RowDefinition Height="200"/>
-            <RowDefinition Height="150"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="95"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="5"/>
         </Grid.RowDefinitions>
     <VerticalStackLayout
         Grid.Row="0"
         Padding="40,0"
-        Spacing="25"
-            Background="Green">
-            <Button x:Name="Setting" Text="Nastavení" IsEnabled="True" Command="{Binding SettingCommand}" Padding="8, 8, 8, 8" HorizontalOptions="End" />
+        Spacing="25">
             <HorizontalStackLayout>
-                <Entry x:Name="Filter" FontAttributes="Italic" FontSize="Medium" WidthRequest="200" Text="{Binding FilterText}"  Placeholder="Filtr" />
-                <Button Text="Filtruj" Margin="0,-10" HeightRequest="50" Command="{Binding FilterCommand}" />
+                    <Entry x:Name="Filter" FontAttributes="Italic" FontSize="Medium" WidthRequest="100" Text="{Binding FilterText}" Placeholder="Filtr" />
+                    <Button Text="Filtruj" Margin="0,-10" Command="{Binding FilterCommand}" />
+                    <Button x:Name="Setting" Text="Nastavení" IsEnabled="True" Command="{Binding SettingCommand}" Padding="8, 8, 8, 8" HorizontalOptions="End" />
             </HorizontalStackLayout>
         </VerticalStackLayout>
                 <Grid Grid.Row="1"
-                      HorizontalOptions="Fill"
-                      BackgroundColor="Yellow"
-                      MaximumHeightRequest="155">
+                      HorizontalOptions="Fill">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="50" />
-                        <RowDefinition Height="5" />
+                        <RowDefinition Height="32" />
+                        <RowDefinition Height="32" />
+                        <RowDefinition Height="32" />
+                        <RowDefinition Height="4" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
@@ -60,20 +65,20 @@
                     <Rectangle  Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Fill="Black" />
                 </Grid>
         </Grid>
-        <Grid x:Name="UnderGrid" BackgroundColor="CadetBlue" VerticalOptions="FillAndExpand">
+        <Grid
+            Grid.Row="1"
+            x:Name="UnderGrid" >
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-
-            <VerticalStackLayout Grid.Row="0" VerticalOptions="FillAndExpand" >
             <ScrollView VerticalScrollBarVisibility="Always" VerticalOptions="FillAndExpand" >
-            <CollectionView x:Name="DataItems" BackgroundColor="#E63C3C" VerticalOptions="FillAndExpand">
+            <CollectionView x:Name="DataItems" VerticalOptions="FillAndExpand">
                 <CollectionView.Behaviors>
                     <local:InfiniteScrollBehavior />
                 </CollectionView.Behaviors>
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                            <Grid>
+                            <Grid Grid.Row="0">
                             <Grid.GestureRecognizers>
                                 <TapGestureRecognizer Buttons="Primary" Tapped="OnLeftClickEvent" NumberOfTapsRequired="1" CommandParameter="{Binding Id}" />
                                 <TapGestureRecognizer Buttons="Secondary" Tapped="OnRightClickEvent" NumberOfTapsRequired="1" CommandParameter="{Binding Id}" />
@@ -97,8 +102,8 @@
                     </CollectionView.ItemTemplate>
             </CollectionView>
         </ScrollView>
-        </VerticalStackLayout>
         </Grid>
-        <Button Grid.Row="3" x:Name="Redirect" Text="Přidat novou položku" FontSize="Medium" FontAttributes="Bold" Command="{Binding AddCommand}" HorizontalOptions="Fill" />
+        <Button Grid.Row="2" x:Name="Redirect" Text="Přidat novou položku" FontSize="Medium" FontAttributes="Bold" Command="{Binding AddCommand}" HorizontalOptions="Fill" />
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
